# src/models/UsuarioModel.ts
@@ -8,6 +8,9 @@ import {
 import { db } from "../firestore";
 import CollectionNames from "./CollectionNames";
 import { Model } from "./Model";
+import { Reserva, ReservaModel } from "./ReservaModel";
+import firebase from "firebase-admin";
+import { Servico } from "./ServicoModel";
 
 export interface Usuario {
 	nome_completo: string;
@@ -19,6 +22,7 @@ export interface Usuario {
 	logradouro: string;
 	complemento: string;
 	numero: number;
+	reservas: FirebaseFirestore.DocumentReference[];
 }
 
 export class UsuarioModel implements Model<Usuario> {
@@ -38,16 +42,56 @@ export class UsuarioModel implements Model<Usuario> {
 		const ref = db.collection(`${CollectionNames.USUARIO}`).doc(id!);
 
 		if ((await ref.get()).exists) return false;
-        
+
 		ref.set(docData);
 		return true;
 	}
 
-	update(docData: Usuario, id: string): Promise<boolean> {
+	update(docData: object, id: string): Promise<boolean> {
 		return updateDoc(this.getPath(), docData, id);
 	}
 
 	remove(id: string): Promise<boolean> {
 		return deleteDoc(this.getPath(), id);
+	}
+
+	public async getReservas(id: string) {
+		const userDoc = await db.collection(this.getPath()).doc(id).get();
+		const userData = userDoc.data()! as Usuario;
+		const reservaModel = new ReservaModel();
+
+		const reservaArray = await Promise.all(
+			userData.reservas.map(
+				async (reserva: FirebaseFirestore.DocumentReference) => {
+					const reservaData = (await reserva.get()).data() as Reserva;
+					console.log(reservaData.servicos)
+					reservaData.servicos = await reservaModel.getServicos(
+						reservaData.servicos as FirebaseFirestore.DocumentReference[]
+					);
+					console.log(reservaData.servicos)
+					return reservaData;
+				}
+			)
+		);
+
+		return reservaArray;
+	}
+
+	public async addReserva(
+		reserva: FirebaseFirestore.DocumentReference,
+		id: string
+	) {
+		await this.update(
+			{ reservas: firebase.firestore.FieldValue.arrayUnion(reserva) },
+			id
+		);
+	}
+
+	public async removeReserva(reservaCollection: string, reservaId: string, id: string) {
+		const reservaRef = db.collection(reservaCollection).doc(reservaId);
+		await this.update(
+			{ reservas: firebase.firestore.FieldValue.arrayRemove(reservaRef) },
+			id
+		);
 	}
 }
